[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
mqtt-async-client = "0.3"
tokio = { version = "1.0", features = ["net"]}
rustls = { version = "0.19", features = ["dangerous_configuration"] }
tracing = "0.1"
tracing-subscriber = "0.2"
webpki = "0.21"
x509-signature = { version = "0.4", features = ["rustls", "webpki"] }